package alarms;
option java_package = "org.yamcs.protobuf";

import "yamcs.proto";
import "pvalue.proto";

message AlarmsSubscribeRequest {
   optional bool getCurrent = 1; // Whether to return the active set of alarms after a subscribe request is made (defaults to true)
}

message Alarm {
   optional uint32 id = 1;
   optional pvalue.ParameterValue triggerValue = 2;
   optional pvalue.ParameterValue mostSevereValue = 3;
   optional pvalue.ParameterValue currentValue = 4;
   optional uint32 violations = 5;
}

message AlarmNotice {
   enum Type {
      TRIGGERED = 1;
      SEVERITY_INCREASED = 2;
      UPDATED = 3;
      CLEARED = 4;
   }

   optional uint32 alarmId = 1;
   optional Type type = 2;
   optional int64 triggerTime = 3;
   optional string triggerTimeUTC = 4;
   optional pvalue.ParameterValue pval = 5;
   optional string username = 6;  // In case the alarm was cleared
}
